feat: Добавлено комментирование строк и настройка языка
- Реализована возможность для AI-агента оставлять комментарии к конкретным строкам кода в pull request.
- Комментарии группируются в один обзор (review) для более чистого отображения.
- Добавлена опция  в , позволяющая настраивать язык ответов AI-агента.

--- a/action.yml
+++ b/action.yml
@@ -82,6 +82,10 @@ inputs:
   review_rules_file:
     description: 'Path to a file containing custom review rules to be added to the AI system prompt.'
     required: false
+  language:
+    description: 'The language for the AI review comments (e.g., "English", "Spanish", "Russian").'
+    required: false
+    default: 'English'
 
 runs:
   using: 'node20'
